--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script src="js/script.js"></script>
-    <script src="js/array.js"></script>
+    <script src="js/pilhas.js"></script>
 </body>
 
 </html>
