--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <script src="js/script.js"></script>
-    <script src="js/array.js"></script>
+    <script src="js/filas.js"></script>
 </body>
 
 </html>
