--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>prática de Estutura de dados</title>
 </head>
 
 <body>
+
+    <main>
+        <div id="quadro">
+            <form class="form">
+                <input type="number" class="input-number" placeholder="Decimal">
+
+                <button class="button-calc">Calcular</button>
+            </form>
+        </div>
+    </main>
+
     <script src="js/array.js"></script>
     <script src="js/pilhas.js"></script>
     <script src="js/script.js"></script>
