--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 
     <main>
         <div id="quadro">
-            <form class="form">
-                <input type="number" class="input-number" placeholder="Decimal">
 
-                <button class="button-calc">Calcular</button>
+            <form class="form">
+                <label for="number" name="number">Binário
+                    <input type="number" class="input-number"></label>
+                <label for="number" name="number">Octal
+                    <input type="number" class="input-number"></label>
+                <label for="number" name="number">Decimal
+                    <input type="number" class="input-number"></label>
+                <label for="number" name="number">Hexadecimal
+                    <input type="number" class="input-number"></label>
             </form>
         </div>
     </main>
